--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-square-web-payments-sdk": "^3.2.1",
+    "square": "^37.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
