added email confirmation

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MOOSEND_API_KEY=2a032cef-8eb8-4317-9808-fd869f5fba37
 MOOSEND_LIST_ID=bd61c363-d27a-44e0-a8fd-50030539024e
 MOOSEND_MESSAGES_LIST_ID=39bc998a-f53e-4192-9dd1-9fb20205bf51
+NEXT_PUBLIC_SERVICE_ID=service_qeplqak
+NEXT_PUBLIC_USER_ID=Q6Pk1XW8n87bht3Et
+NEXT_PUBLIC_TEMPLATE_ID=template_d0i45ur
+NEXT_PUBLIC_RECEIVER_EMAIL=info@fpwildlifepark.com
