--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cookies-next": "^4.2.1",
+    "emailjs-com": "^3.2.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
