--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@vercel/analytics": "^1.3.1",
     "cookies-next": "^4.2.1",
     "emailjs-com": "^3.2.0",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "rsuite": "^5.65.0"
